service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    release: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 32000
